# llm-api-deployer

.github/workflows/: build.yml
.monkeycode/specs/local-llm-deployer/: design.md  requirements.md  tasklist.md
local-llm-deployer/: index.html  package-lock.json  package.json
local-llm-deployer/src/: App.tsx  i18n.ts  index.css
local-llm-deployer/src-tauri/: Cargo.toml  tauri.conf.json
local-llm-deployer/src-tauri/src/: main.rs
local-llm-deployer/src-tauri/src/commands/: api.rs  config.rs  mod.rs  model.rs  monitor.rs  ollama.rs  system.rs
local-llm-deployer/src-tauri/src/models/: app.rs  config.rs  mod.rs  model.rs
local-llm-deployer/src-tauri/src/utils/: mod.rs
local-llm-deployer/src/components/: ApiPanel.tsx  Dashboard.tsx  DownloadProgress.tsx  ModelList.tsx  ResourceMonitor.tsx  Settings.tsx
local-llm-deployer/src/i18n/: en.ts  zhCN.ts
local-llm-deployer/src/store/: appStore.ts  modelStore.ts
local-llm-deployer/src/types/: index.ts
